force-app/main/default/objects/FundingAwardRequirement/fields/gr_Grant_Award_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>gr_Grant_Award_Report_ID__c</fullName>
    <description>An identifier for a unique Federal award recipient report.</description>
    <inlineHelpText>An identifier for a unique Federal award recipient report.</inlineHelpText>
    <label>Grant Award Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>