force-app/main/default/objects/FundingAwardRequirement/fields/gr_Grant_Award_Report_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>gr_Grant_Award_Report_Status_Code__c</fullName>
    <description>A status of the award recipient&apos;s report for a federal award, e.g., initial or revised.</description>
    <inlineHelpText>A status of the award recipient&apos;s report for a federal award, e.g., initial or revised.</inlineHelpText>
    <label>Grant Award Report Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>