force-app/main/default/objects/FundingAwardRequirement/fields/gr_Grant_Award_Report_Text__c.field-meta.xml
<CustomField>
    <fullName>gr_Grant_Award_Report_Text__c</fullName>
    <description>A narrative of the details of the report submitted by the Federal award recipient.</description>
    <inlineHelpText>A narrative of the details of the report submitted by the Federal award recipient.</inlineHelpText>
    <label>Grant Award Report Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>