force-app/main/default/objects/FundingAwardRequirement/fields/gr_Grant_Award_Report_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>gr_Grant_Award_Report_Type_Code__c</fullName>
    <label>Grant Award Report Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Final Financial</fullName>
            </value>
            <value>
                <fullName>Invention Statement</fullName>
            </value>
            <value>
                <fullName>Inventory Report</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Final Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>