force-app/main/default/objects/FundingAwardRequirement/fields/gr_Grant_Award_Reporting_Freq_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>gr_Grant_Award_Reporting_Freq_Type_Code__c</fullName>
    <description>A code denoting the appropriate reporting term corresponding to the requirements contained in the Federal award document. “Other” may be used when more frequent reporting is required for high-risk grantees.</description>
    <inlineHelpText>A code denoting the appropriate reporting term corresponding to the requirements contained in the Federal award document. “Other” may be used when more frequent reporting is required for high-risk grantees.</inlineHelpText>
    <label>Grant Award Reporting Freq Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Other (describe)</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>