force-app/main/default/objects/FundingAwardRequirement/recordTypes/gr_Funding_Award_Requirement_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>gr_Funding_Award_Requirement_Record_Type</fullName>
    <active>true</active>
    <label>Funding Award Requirement Record Type</label>
</RecordType>